fix(hive): harden inspection session handling